# opengl-experiments

./: .clang-format  .editorconfig  .gitmodules  CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/KHR/: khrplatform.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shaders/: triangle.frag.glsl
src/: main.cpp  shaders.cpp  shaders.hpp  window.hpp
